// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom notifications 1`] = `
<div
  class="Notificationsstyles__Box-sc-1qw1toe-0 KXnKS"
>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 fWkhoP"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 ynraq"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 19.414l12-12V6h-1.414L10 16.586 3.414 10H2v1.414z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Custom notification
        </div>
        <div>
          <b
            style="text-transform:uppercase"
          >
            [ok]: 
          </b>
          This is a custom notification
          <div
            style="margin-top:10px"
          >
            <button
              class="Buttonstyles__Box-sc-1cce11-0 dmPIrF"
              type="button"
            >
              <span
                class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
              >
                OK
              </span>
            </button>
          </div>
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 ekFZrE"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 fWkhoP"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 bxAarK"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12.866 3.911l9 15.589L21 21H3l-.866-1.5 9-15.589h1.732zM4.732 19h14.536L12 6.411 4.732 19zM11 10h2v5h-2v-5zm0 6h2v2h-2v-2z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Custom notification
        </div>
        <div>
          <b
            style="text-transform:uppercase"
          >
            [error]: 
          </b>
          This is a custom error notification
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 bFIgEw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications 1`] = `
<div
  class="Notificationsstyles__Box-sc-1qw1toe-0 eSYKVY"
>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 eYxjco"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 19.414l12-12V6h-1.414L10 16.586 3.414 10H2v1.414z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 ekFZrE"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 ASBTC"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zm-1 11h2v2h-2v-2zm0-8h2v7h-2V7z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 irPfRQ"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 jtxyKr"
      id="notification_3"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12.866 3.911l9 15.589L21 21H3l-.866-1.5 9-15.589h1.732zM4.732 19h14.536L12 6.411 4.732 19zM11 10h2v5h-2v-5zm0 6h2v2h-2v-2z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 bFIgEw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ buttons 1`] = `
<div
  class="Notificationsstyles__Box-sc-1qw1toe-0 eSYKVY"
>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 eYxjco"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 19.414l12-12V6h-1.414L10 16.586 3.414 10H2v1.414z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 ekFZrE"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 ASBTC"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zm-1 11h2v2h-2v-2zm0-8h2v7h-2V7z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 irPfRQ"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 jtxyKr"
      id="notification_3"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12.866 3.911l9 15.589L21 21H3l-.866-1.5 9-15.589h1.732zM4.732 19h14.536L12 6.411 4.732 19zM11 10h2v5h-2v-5zm0 6h2v2h-2v-2z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 bFIgEw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 fsEeey"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 dRgEym"
      id="notification_4"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 iQBspn"
      id="notification_5"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-175jrd3-4 dKaZOh"
        >
          <div
            class="Groupsstyles__Box-sc-4izty4-0 bdwRrP"
          >
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 ifgnSM"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 iIbIuH"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 eLyMDD"
      id="notification_6"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 19.414l12-12V6h-1.414L10 16.586 3.414 10H2v1.414z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 ekFZrE"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-175jrd3-4 dKaZOh"
        >
          <div
            class="Groupsstyles__Box-sc-4izty4-0 bdwRrP"
          >
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 ifgnSM"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 iIbIuH"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 cVkWpT"
      id="notification_7"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zm-1 11h2v2h-2v-2zm0-8h2v7h-2V7z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 irPfRQ"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-175jrd3-4 dKaZOh"
        >
          <div
            class="Groupsstyles__Box-sc-4izty4-0 bdwRrP"
          >
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 ifgnSM"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 iIbIuH"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 iwlkkl"
      id="notification_8"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12.866 3.911l9 15.589L21 21H3l-.866-1.5 9-15.589h1.732zM4.732 19h14.536L12 6.411 4.732 19zM11 10h2v5h-2v-5zm0 6h2v2h-2v-2z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 bFIgEw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-175jrd3-4 dKaZOh"
        >
          <div
            class="Groupsstyles__Box-sc-4izty4-0 bdwRrP"
          >
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 ifgnSM"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-4izty4-1 faEimb"
            >
              <button
                class="Buttonstyles__Box-sc-1cce11-0 iIbIuH"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-sc-1cce11-1 bLMNXc"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ compact 1`] = `
<div
  class="Notificationsstyles__Box-sc-1qw1toe-0 eSYKVY"
>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 eYxjco"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 19.414l12-12V6h-1.414L10 16.586 3.414 10H2v1.414z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 ekFZrE"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 ASBTC"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zm-1 11h2v2h-2v-2zm0-8h2v7h-2V7z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 irPfRQ"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 jtxyKr"
      id="notification_3"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12.866 3.911l9 15.589L21 21H3l-.866-1.5 9-15.589h1.732zM4.732 19h14.536L12 6.411 4.732 19zM11 10h2v5h-2v-5zm0 6h2v2h-2v-2z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 bFIgEw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 fsEeey"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 dRgEym"
      id="notification_4"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ limit 1`] = `
<div
  class="Notificationsstyles__Box-sc-1qw1toe-0 eSYKVY"
>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 eYxjco"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 19.414l12-12V6h-1.414L10 16.586 3.414 10H2v1.414z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 ekFZrE"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-175jrd3-3 ASBTC"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10c-.006 5.52-4.48 9.994-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zm-1 11h2v2h-2v-2zm0-8h2v7h-2V7z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
      >
        <div
          class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-sc-15a4ee-0 irPfRQ"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ position 1`] = `
Array [
  <div
    class="Notificationsstyles__Box-sc-1qw1toe-0 iuUZtm"
  >
    <div
      class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
        >
          <div
            class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-sc-1qw1toe-0 eSYKVY"
  >
    <div
      class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
        >
          <div
            class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-sc-1qw1toe-0 jdEkEn"
  >
    <div
      class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
        >
          <div
            class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-sc-1qw1toe-0 laeaGC"
  >
    <div
      class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
        >
          <div
            class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-sc-1qw1toe-0 jWriyE"
  >
    <div
      class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
        >
          <div
            class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-sc-1qw1toe-0 KXnKS"
  >
    <div
      class="Notificationstyles__Box-sc-15a4ee-1 eQnUuc"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-175jrd3-3 iLnELh"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-175jrd3-0 kbSKVS"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M12 22.228c-5.523 0-10-4.477-10-10s4.477-10 10-10 10 4.477 10 10c-.007 5.52-4.48 9.993-10 10zm0-18a8 8 0 108 8 8.009 8.009 0 00-8-8zM11 6h2v2h-2V6zm2 9h2v2H9v-2h2v-4H9V9h4v6z"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-175jrd3-2 jiRycd"
        >
          <div
            class="Alertstyles__Title-sc-175jrd3-1 kOuMrK"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-sc-15a4ee-0 jmPtGm"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M10.586 12L4 18.586V20h1.414L12 13.414 18.586 20H20v-1.414L13.414 12 20 5.414V4h-1.414L12 10.586 5.414 4H4v1.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
